Adding Generic Search API
